--- a/roliweb/index.html
+++ b/roliweb/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Seaboard Hacks</title>
+    <script src="/static/DSP.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="app"></div>
