--- a/Surfboard/index.html
+++ b/Surfboard/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Seaboard Hacks</title>
-    <script src="/static/DSP.js" type="text/javascript"></script>
+    <title>Surfboard</title>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
